--- a/package.json
+++ b/package.json
@@ -5,10 +5,22 @@
   "module": "/es/index.js",
   "types": "/es/index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "rollup -c"
   },
+  "files": [
+    "es",
+    "lib"
+  ],
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.23.3",
+    "@babel/plugin-transform-runtime": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-typescript": "^11.1.5",
+    "rollup": "^4.4.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "tslib": "^2.6.2",
     "typescript": "^5.2.2"
   }
 }
