--- a/.babelrc
+++ b/.babelrc
@@ -2,9 +2,9 @@
   "presets": [
     [
       "@babel/preset-env",
-      {
-        "modules": false
-      }
+    //   {
+    //     "modules": true
+    //   }
     ]
   ],
   "plugins": [["@babel/plugin-transform-runtime"]]
