--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "es",
     "lib"
   ],
-  "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.23.3",
     "@babel/plugin-transform-runtime": "^7.23.3",
@@ -23,5 +22,25 @@
     "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+git@github.com:PotatoGroup/compare-versions.git"
+  },
+  "homepage": "https://github.com/PotatoGroup/compare-versions#readme",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
+  },
+  "authors": [
+    {
+      "name": "tangxiaoxin",
+      "email": "1302947749@qq.com",
+      "url": "https://github.com/ziluo-tang"
+    }
+  ],
+  "license": "MIT",
+  "keywords": [
+    "compare-version"
+  ]
 }
